--- a/SignalRGridDemo/SignalRGridDemo.csproj
+++ b/SignalRGridDemo/SignalRGridDemo.csproj
@@ -207,7 +207,6 @@
   <ItemGroup>
     <Content Include="App\EmployeeGrid.js" />
     <Content Include="App\odata.js" />
-    <Content Include="App\signalr-hub.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -241,6 +240,8 @@
     <Content Include="Scripts\angular-sanitize.js" />
     <Content Include="Scripts\angular-sanitize.min.js" />
     <Content Include="Scripts\angular-scenario.js" />
+    <Content Include="Scripts\angular-signalr-hub.js" />
+    <Content Include="Scripts\angular-signalr-hub.min.js" />
     <Content Include="Scripts\angular-touch.js" />
     <Content Include="Scripts\angular-touch.min.js" />
     <Content Include="Scripts\angular.js" />
